--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <meta name="apple-mobile-web-app-title" content="Timesheet" />
 
     <!-- Icons -->
-    <link rel="icon" type="image/png" sizes="192x192" href="/time-sheet/icon-192.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/time-sheet/icon-512.png" />
-    <link rel="apple-touch-icon" href="/time-sheet/icon-192.png" />
+    <link rel="icon" type="image/png" href="/time-sheet/hand-watch-icon.png" />
+    <link rel="apple-touch-icon" href="/time-sheet/hand-watch-icon.png" />
 
     <!-- Manifest -->
     <link rel="manifest" href="/time-sheet/manifest.json" />
